--- a/package.json
+++ b/package.json
@@ -12,13 +12,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.5",
+    "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
+    "@angular/localize": "~10.1.5",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^6.1.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
