--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.2",
+    "firebase-admin": "^9.4.1",
     "font-awesome": "^4.7.0",
+    "missing": "^0.0.1",
     "ngx-bootstrap": "^6.1.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
