--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.2",
-    "firebase-admin": "^9.4.1",
+    "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.0",
     "font-awesome": "^4.7.0",
     "missing": "^0.0.1",
     "ngx-bootstrap": "^6.1.0",
@@ -56,6 +57,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack-node-externals": "^2.5.2"
   }
 }
