--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
+    "tslint-angular": "^3.0.3",
     "typescript": "~4.0.2",
     "webpack-node-externals": "^2.5.2"
   }
