--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # dependencies
 /node_modules
+serviceAccountKey.json
 
 # profiling files
 chrome-profiler-events*.json
@@ -22,6 +23,7 @@ speed-measure-plugin*.json
 *.launch
 .settings/
 *.sublime-workspace
+.env
 
 # IDE - VSCode
 .vscode/*
